# adventofcode

./: .editorconfig  README.md
2016/day1/: main.py
2016/day10/: main.py
2016/day11/: main.py
2016/day12/: main.py
2016/day13/: main.py
2016/day14/: main.py
2016/day15/: main.py
2016/day16/: main.py
2016/day17/: main.py
2016/day18/: main.py
2016/day19/: main.py
2016/day2/: main.py
2016/day20/: main.py
2016/day21/: main.py
2016/day22/: main.py  part2.txt
2016/day25/: main.py
2016/day3/: main.py
2016/day4/: main.py
2016/day5/: main.py  main2.py
2016/day6/: main.py
2016/day7/: main.py
2016/day8/: main.py
2016/day9/: main.py
2017/.skel/: main.py
2017/day1/: main.py
2017/day10/: main.py
2017/day11/: main.py
2017/day12/: main.py
2018/: Pipfile
2019/: Pipfile  main.py
2020/: main.py
2023/python/: .gitignore  Makefile  pyproject.toml  requirements.txt
2023/python/day1/: __main__.py
2023/python/day10/: __main__.py
2023/python/day11/: __main__.py
2023/python/day12/: __main__.py
2023/python/day13/: __main__.py  input.txt
2023/python/day14/: __main__.py
2023/python/day15/: __main__.py
2023/python/day16/: __main__.py
2023/python/day18/: __main__.py
2023/python/day2/: __main__.py
2023/python/day3/: __main__.py
2023/python/day4/: __main__.py
2023/python/day5/: __main__.py
2023/python/day6/: __main__.py
2023/python/day7/: __main__.py
2023/python/day8/: __main__.py
2023/python/day9/: __main__.py
2023/python/scripts/: fetch_input.py
2023/python/utils/: file.py
utils/: __init__.py  input.py
(+86 files in other folders)
