[project]
name = "adventofcode"
requires-python = ">3.12.0"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120

[tool.ruff]
line-length = 120
select = [
  "F",   # pyflakes
  "PLE", # pylint errors
  "UP",  # pyupgrade
]
fixable = [
  "F",   # pyflakes
  "PLE", # pylint errors
  "UP",  # pyupgrade
]
